@@ -230,14 +230,11 @@ public class HistoryPageFilter<T> {
         // Queue items can start building out of order with how they got added to the queue. Sorting them
         // before adding to the page. They'll still get displayed before the building items coz they end
         // up in a different list in HistoryPageFilter.
-        items.sort(new Comparator<Object>() {
-            @Override
-            public int compare(Object o1, Object o2) {
-                long o1QID = HistoryPageEntry.getEntryId(o1);
-                long o2QID = HistoryPageEntry.getEntryId(o2);
+        items.sort((Comparator<Object>) (o1, o2) -> {
+            long o1QID = HistoryPageEntry.getEntryId(o1);
+            long o2QID = HistoryPageEntry.getEntryId(o2);
 
-                return Long.compare(o2QID, o1QID);
-            }
+            return Long.compare(o2QID, o1QID);
         });
     }
 
@@ -261,7 +258,7 @@ public class HistoryPageFilter<T> {
         HistoryPageEntry<HistoricalBuild> entry = new HistoryPageEntry<>(run);
         // Assert that runs have been added in descending order
         if (!runs.isEmpty()) {
-            if (entry.getEntryId() > runs.get(runs.size() - 1).getEntryId()) {
+            if (entry.getEntryId() > runs.getLast().getEntryId()) {
                 throw new IllegalStateException("Cannot add newer " + run + " to descending-order list " +
                     runs.stream().map(HistoryPageEntry::getEntry).collect(Collectors.toList()));
             }
@@ -278,8 +275,7 @@ public class HistoryPageFilter<T> {
     private boolean add(Object entry) {
         // Purposely not calling isFull(). May need to add a greater number of entries
         // to the page initially, newerThan then cutting it back down to size using cutLeading()
-        if (entry instanceof QueueItem) {
-            QueueItem item = (QueueItem) entry;
+        if (entry instanceof QueueItem item) {
             if (searchString != null && !fitsSearchParams(item)) {
                 return false;
             }
